--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,18 @@ body:
   - type: markdown
     attributes:
       value: >
-        Do you want to ask a question? Are you looking for support or a feature request? Please use the [Discussions page](https://github.com/mriscoc/Ender3V2S1/discussions).
+        Do you want to ask a question? Are you looking for support or a feature request? 
+        **This is not a general printer support forum**. Many problems can be easily solved by reading the firmware [Wiki](https://github.com/mriscoc/Ender3V2S1/wiki#main-topics) please check the calibration guide.
+        This Issue Queue is for firmware bug reports and development-related issues, and we prefer not to handle user-support questions here. For best results getting help with configuration and troubleshooting, please use the following resources:
+  
+        Enhanced support in Patreon: https://www.patreon.com/mriscoc
+
+        Free community support:
+        - Github discussions: https://github.com/mriscoc/Ender3V2S1/discussions
+        - Facebook: https://www.facebook.com/groups/professionalfirmware
+        - Telegram: https://t.me/ender3v2s1firmware
+        - Reddit: https://www.reddit.com/r/Ender3v2Firmware
+        - Discord: https://discord.gg/3dprinters
 
   - type: markdown
     attributes:
